// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProposalPreviewFooter /> should render a footer with comments counters only 1`] = `
<Counters>
  <div
    className="card__counters__item card__counters__item--comments"
  >
    <div
      className="card__counters__value"
    >
      13
    </div>
    <FormattedMessage
      id="comment.count_no_nb"
      tagName="div"
      values={
        Object {
          "count": 13,
        }
      }
    />
  </div>
</Counters>
`;

exports[`<ProposalPreviewFooter /> should render a footer with donation infos 1`] = `
<Counters>
  <div
    className="card__counters__item card__counters__item--comments"
  >
    <div
      className="card__counters__value"
    >
      15000
       €
    </div>
    <FormattedMessage
      id="donation_amount_collected.count_no_nb"
      tagName="div"
      values={
        Object {
          "count": 15000,
        }
      }
    />
  </div>
  <div
    className="card__counters__item card__counters__item--comments"
  >
    <div
      className="card__counters__value"
    >
      5
    </div>
    <FormattedMessage
      id="donation.count_no_nb"
      tagName="div"
      values={
        Object {
          "count": 5,
        }
      }
    />
  </div>
</Counters>
`;

exports[`<ProposalPreviewFooter /> should render a footer with votes and comments counters 1`] = `
<Counters>
  <div
    className="card__counters__item card__counters__item--comments"
  >
    <div
      className="card__counters__value"
    >
      13
    </div>
    <FormattedMessage
      id="comment.count_no_nb"
      tagName="div"
      values={
        Object {
          "count": 13,
        }
      }
    />
  </div>
  <div
    className="card__counters__item card__counters__item--votes"
  >
    <Tooltip
      backgroundColor="black"
      borderRadius="4px"
      label={
        <React.Fragment>
          <Text
            fontFamily="OpenSans"
            fontSize={1}
            lineHeight="sm"
            textAlign="center"
          >
            numeric-votes-count
          </Text>
        </React.Fragment>
      }
    >
      <div
        className="card__counters__value"
      >
        42
      </div>
    </Tooltip>
    <p>
      vote.count_no_nb
    </p>
  </div>
  <div
    className="card__counters__item card__counters__item--votes"
  >
    <Tooltip
      backgroundColor="black"
      borderRadius="4px"
      label={
        <React.Fragment>
          <Text
            fontFamily="OpenSans"
            fontSize={1}
            lineHeight="sm"
            textAlign="center"
          >
            numeric-points-count
          </Text>
        </React.Fragment>
      }
    >
      <div
        className="card__counters__value"
      >
        192
      </div>
    </Tooltip>
    <p>
      points-count
    </p>
  </div>
</Counters>
`;

exports[`<ProposalPreviewFooter /> should render a footer with votes counters only 1`] = `
<Counters>
  <div
    className="card__counters__item card__counters__item--votes"
  >
    <Tooltip
      backgroundColor="black"
      borderRadius="4px"
      label={
        <React.Fragment>
          <Text
            fontFamily="OpenSans"
            fontSize={1}
            lineHeight="sm"
            textAlign="center"
          >
            numeric-votes-count
          </Text>
        </React.Fragment>
      }
    >
      <div
        className="card__counters__value"
      >
        42
      </div>
    </Tooltip>
    <p>
      vote.count_no_nb
    </p>
  </div>
  <div
    className="card__counters__item card__counters__item--votes"
  >
    <Tooltip
      backgroundColor="black"
      borderRadius="4px"
      label={
        <React.Fragment>
          <Text
            fontFamily="OpenSans"
            fontSize={1}
            lineHeight="sm"
            textAlign="center"
          >
            numeric-points-count
          </Text>
        </React.Fragment>
      }
    >
      <div
        className="card__counters__value"
      >
        192
      </div>
    </Tooltip>
    <p>
      points-count
    </p>
  </div>
</Counters>
`;

exports[`<ProposalPreviewFooter /> should render a footer without counters 1`] = `""`;

exports[`<ProposalPreviewFooter /> should render a footer without votes counter 1`] = `
<Counters>
  <div
    className="card__counters__item card__counters__item--comments"
  >
    <div
      className="card__counters__value"
    >
      13
    </div>
    <FormattedMessage
      id="comment.count_no_nb"
      tagName="div"
      values={
        Object {
          "count": 13,
        }
      }
    />
  </div>
</Counters>
`;
